generate_sourcelists("./")
add_subdirectory(adaptivemeshrefinement)
add_subdirectory(ants)
add_subdirectory(bouncingspheres)
add_subdirectory(chromatography)
add_subdirectory(circle)
add_subdirectory(cars)
add_subdirectory(gameoflife)
add_subdirectory(gameoflife_hpx)
add_subdirectory(gameoflife_live)
add_subdirectory(gameoflife3d)
add_subdirectory(hardwarefluke)
add_subdirectory(jacobi2d)
add_subdirectory(jacobi3d)
add_subdirectory(jacobi3dupdateline)
add_subdirectory(latticeboltzmann)
# add_subdirectory(latticegas)
add_subdirectory(voronoi)
add_subdirectory(wing)
add_subdirectory(redblackgaussseidel)
add_subdirectory(gameoflife_adcirc)