lgd_generate_sourcelists("./")
set(RELATIVE_PATH "")
include(auto.cmake)

if(WITH_MPI)
  if(WITH_INTRINSICS)
    add_executable(libgeodecomp_examples_jacobi3d ${SOURCES})
    set_target_properties(libgeodecomp_examples_jacobi3d PROPERTIES OUTPUT_NAME jacobi3d)
    target_link_libraries(libgeodecomp_examples_jacobi3d ${LOCAL_LIBGEODECOMP_LINK_LIB})
  endif()
endif()
